# GoProAPI_CPP

./: .gitmodules  CMakeLists.txt  README.md
src/: Main.cpp
src/gopro/: GoPro.cpp  GoPro.h  GoProCategories.h  GoProCommand.cpp  GoProCommand.h
src/http/: HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.h
